...
    <string name="language_system_default_description">Follow the device language</string>
    <string name="large_timeline">Timeline %1$s</string>
    <string name="liked_posts_empty_subtitle">Posts you like will appear here.</string>
    <string name="liked_posts_empty_title">No likes yet</string>
    <string name="media_attachment_fallback">Post attachment %1$d</string>
    <string name="media_close_description">Close description</string>
    <string name="media_close_viewer">Close media viewer</string>
    <string name="media_description">Description</string>
    <string name="media_full_size_unavailable">Full-size media unavailable</string>
    <string name="media_open_browser">Open media in browser</string>
    <string name="media_options">Media options</string>
    <string name="media_page_count">%1$d / %2$d</string>
    <string name="media_playback_unavailable">%1$s playback is not available here.</string>
...
    <string name="media_viewer">Media viewer</string>
    <string name="moderation_load_failed">The moderation list could not be loaded.</string>
    <string name="moderation_session_unavailable">This account session is no longer available.</string>
    <string name="nav_compose">Compose post</string>
    <string name="nav_direct_messages">Direct messages</string>
    <string name="nav_home">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_photo_grid">Photo grid</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_search">Search</string>
    <string name="nav_switch_account">Switch account</string>
    <string name="notification_action_mark_all_read">Mark all as read</string>
    <string name="notification_action_mark_all_read_confirmation">Mark all as read?</string>
    <string name="notification_action_mark_all_read_description">Mark all notifications as read</string>
    <string name="notification_action_settings">Notification settings</string>
    <string name="notification_action_settings_description">Open notification settings</string>
...
    <string name="notification_activity_quote">Quoted your post</string>
    <string name="notification_activity_quoted_post_update">Updated a quoted post</string>
    <string name="notification_activity_reaction">Reacted with %1$s</string>
    <string name="notification_activity_reply">Replied to you</string>
    <string name="notification_activity_reshare">Reposted your post</string>
    <string name="notification_activity_subscribed_post">Posted something new</string>
    <string name="notification_filter_description">Notification filters; swipe horizontally for more</string>
    <string name="notification_filter_followers">Followers</string>
    <string name="notification_filter_likes">Likes</string>
    <string name="notification_filter_replies">Replies</string>
    <string name="notification_filter_reposts">Reposts</string>
    <string name="notification_label_access_token_created">Access token created</string>
    <string name="notification_label_account_achievement">Account achievement</string>
...
    <string name="notifications_detail_not_cached">This notification is no longer in the local inbox.</string>
    <string name="notifications_detail_title">Notification</string>
    <string name="notifications_dismiss">Dismiss</string>
    <string name="notifications_distributor_message">%1$s notifications</string>
    <string name="notifications_empty_filter_subtitle">Try another filter or pull down to refresh.</string>
    <string name="notifications_empty_subtitle">Activity from people you follow will appear here.</string>
    <string name="notifications_empty_title">All caught up</string>
    <string name="notifications_follow_accept">Accept</string>
    <string name="notifications_follow_reject">Reject</string>
    <string name="notifications_grouped_actors">%1$s and %2$d others</string>
    <string name="notifications_grouped_many_actors">%1$s, %2$s, and %3$d others</string>
    <string name="notifications_grouped_two_actors">%1$s and %2$s</string>
    <string name="notifications_load_older">Load older</string>
...
    <string name="profile_editor_save">Save</string>
    <string name="profile_editor_saving">Saving</string>
    <string name="profile_editor_title">Edit profile</string>
    <string name="profile_editor_unsupported">This server does not support advanced profile settings.</string>
    <string name="profile_editor_visibility_title">Visibility and profile tabs</string>
    <string name="profile_empty_subtitle">Connect an account to load profile details.</string>
    <string name="profile_empty_title">Your profile</string>
    <string name="profile_featured_posts">Featured posts</string>
    <string name="profile_featured_posts_unavailable">Featured posts unavailable</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_follow_action">Follow profile</string>
    <string name="profile_following">Following</string>
    <string name="profile_loading_details">Loading profile details</string>
...
    <string name="saved_posts_unsupported">%1$s are not supported by this server.</string>
    <string name="search_account_failed">Account search failed</string>
    <string name="search_account_prompt">Enter a webfinger handle and press enter.</string>
    <string name="search_accounts_available_profiles">Account search is available from the Profiles tab.</string>
    <string name="search_categories_description">Search categories; swipe horizontally for more</string>
    <string name="search_category_for_you">For you</string>
    <string name="search_category_hashtags">Hashtags</string>
    <string name="search_category_news">News</string>
    <string name="search_category_profiles">Profiles</string>
    <string name="search_clear">Clear search</string>
    <string name="search_explore_hashtags">Explore hashtags</string>
    <string name="search_field">Search field</string>
    <string name="search_find_account">Find an account</string>
...
